--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Logo.png" sizes="any"/>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" sizes="any"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Silvia Chang | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
